# data-structure

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
include/: rb_tree.h
src/: rb_tree.c
tests/: test.h  test_rb_tree.c
